--- a/server/package.json
+++ b/server/package.json
@@ -11,6 +11,8 @@
   "author": "Manikanta Nath",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.0.0",
+    "jsonwebtoken": "^8.5.1",
     "nodemon": "^2.0.6"
   }
 }
